--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "google-protobuf": "^3.19.1",
+    "grpc-web": "^1.3.0",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
