--- a/server/envoy/envoy.yaml
+++ b/server/envoy/envoy.yaml
@@ -39,4 +39,4 @@ static_resources:
     type: logical_dns
     http2_protocol_options: {}
     lb_policy: round_robin
-    hosts: [{ socket_address: { address: todo, port_value: 14586 }}]
+    hosts: [{ socket_address: { address: 'test_server', port_value: 14586 }}]
