--- a/server/dispatcher/redis/docker-compose.yml
+++ b/server/dispatcher/redis/docker-compose.yml
@@ -7,3 +7,5 @@ services:
       - 6379:6379
     volumes:
       - ./data:/bitnami/redis/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - ./data:/data
