--- a/server/envoy/envoy.yaml
+++ b/server/envoy/envoy.yaml
@@ -21,7 +21,7 @@ static_resources:
               domains: ["*"]
               routes:
               - match: { prefix: "/" }
-                route: { cluster: todo_service }
+                route: { cluster: dispatcher_service }
               cors:
                 allow_origin: ["*"]
                 allow_methods: GET, PUT, DELETE, POST, OPTIONS
@@ -34,9 +34,9 @@ static_resources:
           - name: envoy.cors
           - name: envoy.router
   clusters:
-  - name: todo_service
+  - name: dispatcher_service
     connect_timeout: 0.25s
     type: logical_dns
     http2_protocol_options: {}
     lb_policy: round_robin
-    hosts: [{ socket_address: { address: 'test_server', port_value: 14586 }}]
+    hosts: [{ socket_address: { address: 'dispatcher', port_value: 14586 }}]
