--- a/server/main/docker-compose.yml
+++ b/server/main/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   dispatcher:
     build: ./dispatcher
     depends_on:
-      - redis
+      - credis
       - envoy
   
   gameserver:
