fix problem with redis

--- a/server/main/dispatcher/Dockerfile
+++ b/server/main/dispatcher/Dockerfile
@@ -8,5 +8,5 @@ RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r ./requirements.txt
 RUN python -m grpc_tools.protoc -I./grpc --python_out=. --grpc_python_out=. ./grpc/dispatcher.proto
 
-CMD ["python", "dispatcher.py"]
+CMD ["python", "-u", "dispatcher.py"]
 
