--- a/server/main/gameserver/Dockerfile
+++ b/server/main/gameserver/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /usr/src/gameserver
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r ./requirements.txt
 
-CMD ["python", "gameserver.py"]
+CMD ["python", "-u", "gameserver.py"]
