--- a/server/main/gameserver/Dockerfile
+++ b/server/main/gameserver/Dockerfile
@@ -1,10 +1,14 @@
-FROM python:3.10-slim
+FROM ubuntu
+
+RUN apt-get -y update \
+    && apt-get -y upgrade \
+    && apt-get -y install git python3-pip
 
 COPY . /usr/src/gameserver
 
 WORKDIR /usr/src/gameserver
 
-RUN /usr/local/bin/python -m pip install --upgrade pip
+# RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r ./requirements.txt
 
-CMD ["python", "-u", "gameserver.py"]
+CMD ["python3", "-u", "gameserver.py"]
